crates/omega_app/src/dto/openai/snapshots/omega_app__dto__openai__request__tests__user_message_conversion.snap
---
source: crates/omega_app/src/dto/openai/request.rs
expression: router_message
---
{
  "role": "user",
  "content": "Hello"
}
